[package]
name = "nn_hid_hook"
version = "0.1.0"
authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline_smash = { git = "https://github.com/ultimate-research/skyline-smash.git", rev = "95ea66a" }
parking_lot = { version = "0.11", features = ["nightly"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
